[brown] Validator추가